vine-video  and discount-wine section

--- a/styles/global.css
+++ b/styles/global.css
@@ -305,6 +305,7 @@ h3 {
   --dark-brown-color: #1a1512;
   --background-header: #00000080;
   --background-discovery-wine: #342e2e8f;
+  --text-light-gray-color: #f2efe9;
 
   --header-heigth: 105px
 }
