--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,8 @@
 @import url(history.css);
 @import url(varieties-wines.css);
 @import url(craft-wines.css);
+@import url(wine-video.css);
+@import url(discount-wine.css);
 
 
 
