--- a/styles/product-options.css
+++ b/styles/product-options.css
@@ -60,6 +60,10 @@
   color: var(--white-color);
 }
 
+.product-options__link:hover {
+  text-decoration: underline;
+}
+
 @media (min-width: 650px) {
   .product-options__container {
     grid-template-columns: repeat(2, 1fr);
