awards and faq section

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,10 @@
 @import url(craft-wines.css);
 @import url(wine-video.css);
 @import url(discount-wine.css);
+@import url(awards.css);
+@import url(testimonials.css);
+@import url(faq.css);
+@import url(advantages.css);
 
 
 
