--- a/styles/global.css
+++ b/styles/global.css
@@ -285,6 +285,17 @@ h3 {
     letter-spacing: -0.82px;
     line-height: 53px;
   }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    height: 32px;
+    width: 32px;
+  }
+
+  .swiper-button-prev:after,
+  .swiper-button-next:after {
+    font-size: 17px;
+  }
 }
 
 @media (min-width: 992px) {
