--- a/styles/advantages.css
+++ b/styles/advantages.css
@@ -4,9 +4,48 @@
   padding: 50px 0 90px;
 }
 
+.advantages__wine-advantages {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 50px 0px;
+}
+
+.advantage__image-container {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: var(--background-advantage-icon);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary-orange-color);
+  margin-bottom: 20px;
+}
+
+.advantage__image {
+  width: 26px;
+  height: auto;
+}
+
 @media (min-width: 768px) {
   .advantages {
     padding: 50px 0 105px;
+  }
+
+  .advantages__wine-advantages {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px 30px;
+  }
+
+  .advantage__image-container {
+    width: 70px;
+    height: 70px;
+  }
+
+  .advantage__image {
+    width: 40px;
   }
 }
 
@@ -15,4 +54,9 @@
     padding: 50px 0 120px;
   }
 
+  .advantages__wine-advantages {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 0 30px;
+  }
 }
