--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,5 @@
 @import url(testimonials.css);
 @import url(faq.css);
 @import url(advantages.css);
-
-
-
-/* @import url(footer.css); */
+@import url(join-us.css);
+@import url(footer.css);
